# LearningGL

./: CMakeLists.txt  README.md
LearningGL/: CMakeLists.txt  main.cpp
Libraries/: CMakeLists.txt
Libraries/Shader/: CMakeLists.txt  Shader.cpp  Shader.h
Libraries/Stb/: CMakeLists.txt
Misc/Shaders/: basic.frag  basic.vert  texture.frag
MovingTriangle/: CMakeLists.txt  movingTriangle.cpp
